@@ -1,5 +1,6 @@
 2014-03-20 Matt:
 	* Updating README
+	* Added runtime options for Analysis. Annoyed that I hadn't done it yet..
 
 2014-03-19 Matt:
 	* Adding TreeAnalyzer which can loop over simple trees made from G4 output
